# fika-core

./: .gitignore  Makefile  README.md  pyproject.toml
app/: main.py
app/api/: itinerary.py  pois.py
app/core/: config.py
app/db/: supabase_client.py
app/schemas/: itinerary.py
app/services/: ant_colony_opt.py  cvrptw.py  cvrptw_solver.py  maut.py  osrm.py  pipeline.py  transformers.py
app/utils/: logger.py  validators.py
storage/itineraries/: fe42065c-9c92-4dc1-818a-64fe97460728.json
tests/: README.md  ant_colony_test.py  cvrptw_output.json  cvrptw_test.json  cvrptw_test.py  integration_cvrptw_output.json  integration_maut_output.json  integration_test.py  maut_output.json  maut_test.json  maut_test.py  pipeline_test.py
